--- a/Cinema.Presentation.Wpf/View/MainWindow.xaml
+++ b/Cinema.Presentation.Wpf/View/MainWindow.xaml
@@ -380,16 +380,26 @@
                     <TextBlock  Grid.Column="2" Grid.Row="1"  Text="{Binding ProducerViewModel.Surname}" Margin="0,0,-112,0"/>
                 </Grid>
 
-                <ComboBox Grid.Column="1" HorizontalAlignment="Left" 
-                           Grid.Row="4" VerticalAlignment="Top" Width="200" Height="24"
-                          ItemsSource="{Binding ActorViewModels}" Style="{DynamicResource ComboBoxStyle1}" >
+                <Grid Grid.Row="4" Grid.Column="1">
 
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock><Run Text="{Binding Name, Mode=OneWay}"/><Run Text=" "/><Run Text="{Binding Surname, Mode=OneWay}"/></TextBlock>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition Width="16*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock FontSize="14" Text="Actors :"/>
+
+                    <ComboBox Grid.Column="1" HorizontalAlignment="Right" 
+                          VerticalAlignment="Top" Width="190" Height="24"
+                          ItemsSource="{Binding ActorViewModels}" Style="{DynamicResource ComboBoxStyle1}">
+
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock><Run Text="{Binding Name, Mode=OneWay}"/><Run Text=" "/><Run Text="{Binding Surname, Mode=OneWay}"/></TextBlock>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </Grid>
             </Grid>
         </Border>
     </Grid>
