--- a/Cinema.Presentation.Wpf/View/MainWindow.xaml
+++ b/Cinema.Presentation.Wpf/View/MainWindow.xaml
@@ -350,7 +350,8 @@
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition  Height="40" />
-                    <RowDefinition Height="169"  />
+                    <RowDefinition Height="28"  />
+                    <RowDefinition Height="139"/>
 
                 </Grid.RowDefinitions>
 
@@ -399,6 +400,16 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
+                </Grid>
+
+                <Grid Grid.Column="1" Grid.Row="7">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="115*"/>
+                        <ColumnDefinition Width="137*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Supports blu-ray : " FontSize="14"/>
+                    <TextBlock Margin="1,3,0,0" Grid.Column="1" Text="{Binding Path=SelectedFilm.BluRaySupport, Mode=OneWay}"/>
+
                 </Grid>
             </Grid>
         </Border>
