--- a/Cinema.Presentation.Wpf/View/MakingFilm.xaml
+++ b/Cinema.Presentation.Wpf/View/MakingFilm.xaml
@@ -6,7 +6,7 @@
         xmlns:Models="clr-namespace:Films.Domain.Models;assembly=Films.Domain.Models"
 
         mc:Ignorable="d"
-        Title="Making Film" Height="467" Width="380">
+        Title="Making Film" Height="500" Width="380">
 
     <Grid HorizontalAlignment="Stretch" Background="#FF115B5B">
         <Grid.ColumnDefinitions>
@@ -20,33 +20,38 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="49"/>
-            <RowDefinition Height="132"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="28"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="304"/>
         </Grid.RowDefinitions>
 
         <TextBlock Text="Name : " Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" 
-                   FontSize="14"/>
+                   FontSize="14" Margin="0,6" Height="19" Width="48"/>
 
         <TextBox Grid.Column="2" Background="#FF115B5B" BorderBrush="#FF034949"
-                  VerticalAlignment="Center" Text="{Binding Path=Name}"/>
+                  VerticalAlignment="Center" Text="{Binding Path=Name}" Margin="0,8,0,7"/>
 
         <TextBlock Text="Release Date : " Grid.Column="1" Grid.Row="1" 
-                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14" />
+                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14"/>
 
         <TextBox Grid.Column="2" Grid.Row="1" Background="#FF115B5B" 
-                 BorderBrush="#FF034949" VerticalAlignment="Center" Text="{Binding Path=ReleaseDate}"/>
+                 BorderBrush="#FF034949" VerticalAlignment="Center" Text="{Binding Path=ReleaseDate}" Margin="0,7,0,7"/>
 
-        <TextBlock Text="Language : " Grid.Column="1" Grid.Row="2"
-                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14"/>
+        <TextBlock Text="Supports blu-ray  " Grid.ColumnSpan="2" Grid.Row="2" FontSize="14" HorizontalAlignment="Right"/>
 
-        <TextBox Grid.Column="2" Grid.Row="2" Background="#FF115B5B" 
-                 BorderBrush="#FF034949" VerticalAlignment="Center" Text="{Binding Path=Language}"/>
+        <CheckBox IsChecked="{Binding Path=BluRaySupport}" BorderBrush="#FF034949" Background="#FF115B5B" VerticalAlignment="Center" Grid.Column="2" Grid.Row="2"/>
 
-        <TextBlock Text="Producer : " Grid.Column="1" Grid.Row="3"
-                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14"/>
+        <TextBlock Text="Language : " Grid.Column="1" Grid.Row="3"
+                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14" Height="20" Width="71" Margin="0,4" />
 
-        <Border Grid.Column="2" Grid.Row="3" BorderBrush="#FF034949" BorderThickness="1" Grid.ColumnSpan="2" >
+        <TextBox Grid.Column="2" Grid.Row="3" Background="#FF115B5B" 
+                 BorderBrush="#FF034949" VerticalAlignment="Center" Text="{Binding Path=Language}"  Height="16" Margin="0,6"/>
+
+        <TextBlock Text="Producer : " Grid.Column="1" Grid.Row="4"
+                   HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14" Margin="0,19,0,13" Height="18" Width="66"/>
+
+        <Border Grid.Column="2" Grid.Row="4" BorderBrush="#FF034949" BorderThickness="1" Grid.ColumnSpan="2" >
             <Grid Margin="2" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="13*"/>
@@ -70,10 +75,10 @@
             </Grid>
         </Border>
 
-        <TextBlock Grid.Column="1" Grid.Row="4" Text="Actors : " 
+        <TextBlock Grid.Column="1" Grid.Row="5" Text="Actors : " 
                    HorizontalAlignment="Right" Margin="0,7,0,105" FontSize="14" Width="50"/>
 
-        <Border Grid.Column="2" Grid.Row="4" BorderBrush="#FF034949" BorderThickness="1"  Grid.ColumnSpan="2" Margin="0,5,0,-124">
+        <Border Grid.Column="2" Grid.Row="5" BorderBrush="#FF034949" BorderThickness="1"  Grid.ColumnSpan="2" Margin="0,5,0,32">
 
             <Grid Margin="1">
                 <Grid.RowDefinitions>
@@ -123,7 +128,7 @@
         </Border>
 
         <Button  ToolTip="{Binding Path=ToolTipMessage}" IsEnabled="{Binding Path=CanCreateFilm}"
-                 Name="createFilm" Grid.Row="4" Grid.ColumnSpan="5" Margin="5,262,3,-154" FontSize="16"
+                 Name="createFilm" Grid.Row="5" Grid.ColumnSpan="5" Margin="5,275,3,4" FontSize="16"
                 Background="#FF0D4040" BorderBrush="#FF0D4040"  Content="Create Film"
                  Command="{Binding Path=CommandCreateFilm}"/>
 
