--- a/Cinema.Presentation.Wpf/View/MakingFilm.xaml
+++ b/Cinema.Presentation.Wpf/View/MakingFilm.xaml
@@ -4,9 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Models="clr-namespace:Films.Domain.Models;assembly=Films.Domain.Models"
-
         mc:Ignorable="d"
         Title="Making Film" Height="500" Width="380">
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+    </Window.Resources>
+
 
     <Grid HorizontalAlignment="Stretch" Background="#FF115B5B">
         <Grid.ColumnDefinitions>
@@ -39,13 +43,6 @@
                  BorderBrush="#FF034949" VerticalAlignment="Center"
                  Text="{Binding Path=ReleaseDate, UpdateSourceTrigger=PropertyChanged}" 
                  Margin="0,7,0,7" ToolTipService.ShowDuration="5000">
-            
-            <TextBox.ToolTip>
-                <ToolTip IsEnabled="false" DataContext="sdfgfdg">
-                    <!--<TextBlock Text="Date should start from  ( 1895/1/1 )"/>-->
-                </ToolTip>
-            </TextBox.ToolTip>
-            
         </TextBox>
 
         <TextBlock Text="Supports blu-ray  " Grid.ColumnSpan="2" Grid.Row="2" FontSize="14" HorizontalAlignment="Right"/>
@@ -122,6 +119,7 @@
                             />
 
                 </Grid>
+
                 <ListBox Grid.Row="1" Background="#FF115B5B" FontSize="13" 
                          BorderBrush="#FF034949" Margin="0,5,0,0" ItemsSource="{Binding Path= Actors}">
 
@@ -134,13 +132,34 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
+                <Grid Grid.Row="1"  Background="Red" Margin="0,58,0,35"  Visibility="{Binding Path=ToolTipIsEnable, Converter={StaticResource BooleanToVisibility}}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="75"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="Error" FontWeight="Bold" FontSize="16"/>
+
+                    <TextBlock Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
+                         <Run Text="{Binding Path=ToolTipMessage}"/>
+                    </TextBlock>
+
+              
+                </Grid>
+
             </Grid>
         </Border>
 
-        <Button  ToolTip="{Binding Path=ToolTipMessage}" IsEnabled="{Binding Path=CanCreateFilm}"
+        <Button   IsEnabled="{Binding Path=CanCreateFilm}"
                  Name="createFilm" Grid.Row="5" Grid.ColumnSpan="5" Margin="5,275,3,4" FontSize="16"
                 Background="#FF0D4040" BorderBrush="#FF0D4040"  Content="Create Film"
-                 Command="{Binding Path=CommandCreateFilm}"/>
+                 Command="{Binding Path=CommandCreateFilm}">
+
+            <Button.ToolTip>
+                <ToolTip Visibility="{Binding Path=ToolTipIsEnable, Converter={StaticResource BooleanToVisibility}}"            
+                       Content="{Binding Path= ToolTippMessage}"/>
+            </Button.ToolTip>
+        </Button>
 
     </Grid>
 </Window>
