--- a/Cinema.Presentation.Wpf/View/MakingFilm.xaml
+++ b/Cinema.Presentation.Wpf/View/MakingFilm.xaml
@@ -39,11 +39,11 @@
         <TextBlock Text="Release Date : " Grid.Column="1" Grid.Row="1" 
                    HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14"/>
 
-        <TextBox Grid.Column="2" Grid.Row="1" Background="#FF115B5B" 
+        <DatePicker Grid.Column="2" Grid.Row="1" Background="#FF115B5B" 
                  BorderBrush="#FF034949" VerticalAlignment="Center"
                  Text="{Binding Path=ReleaseDate, UpdateSourceTrigger=PropertyChanged}" 
-                 Margin="0,7,0,7" ToolTipService.ShowDuration="5000">
-        </TextBox>
+                 ToolTipService.ShowDuration="5000">
+        </DatePicker>
 
         <TextBlock Text="Supports blu-ray  " Grid.ColumnSpan="2" Grid.Row="2" FontSize="14" HorizontalAlignment="Right"/>
 
