--- a/Cinema.Presentation.Wpf/View/MakingFilm.xaml
+++ b/Cinema.Presentation.Wpf/View/MakingFilm.xaml
@@ -39,7 +39,7 @@
         <TextBlock Text="Release Date : " Grid.Column="1" Grid.Row="1" 
                    HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="14"/>
 
-        <DatePicker Grid.Column="2" Grid.Row="1" Background="#FF115B5B" 
+        <DatePicker DisplayDateStart="1927.11.6"  Grid.Column="2" Grid.Row="1" Background="#FF115B5B" 
                  BorderBrush="#FF034949" VerticalAlignment="Center"
                  Text="{Binding Path=ReleaseDate, UpdateSourceTrigger=PropertyChanged}" 
                  ToolTipService.ShowDuration="5000">
@@ -131,22 +131,6 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
-                <Grid Grid.Row="1"  Background="Red" Margin="0,58,0,35"  Visibility="{Binding Path=ToolTipIsEnable, Converter={StaticResource BooleanToVisibility}}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition Height="75"/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Text="Error" FontWeight="Bold" FontSize="16"/>
-
-                    <TextBlock Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
-                         <Run Text="{Binding Path=ToolTipMessage}"/>
-                    </TextBlock>
-
-              
-                </Grid>
-
             </Grid>
         </Border>
 
